--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Click below to view the full project.</p>
                         <a href="https://wa.me/254798109651"><i class="fa-brands fa-whatsapp"></i></a>
                         <a href="https://instagram.com/munyaoz_patrick_25/#"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://x.com/@Patric_mwanza"><i class="fa-brands fa-twitter-square"></i></a>
-                        <a href="https://www.linkedin.com/in/patrick-mwanza-03b897359"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/patrick-mwanza"><i class="fa-brands fa-linkedin-in"></i></a>
                         <a href="https://t.me/PatrickMwanza"><i class="fab fa-telegram"></i></a>
                     </div>
                     <a href="#" download class="btn btn-2">Download CV</a>
